# Calypso

./: CMakeLists.txt  README.md
dataset/: README.md
experiments/: CardinalityMeasurement.cpp  SuperSpreaderDetection.cpp
include/baseline/: abstrach.h
include/baseline/Calypso/: BloomFilter.h  Calypso.h  Classifier.h  HLL.h  LC.h
include/baseline/Couper/: Couper.cpp  Couper.h
include/baseline/RerSkt/: rerskt.cpp  rerskt.h
include/baseline/VHS/: VHS.cpp  VHS.h
include/common/: BOBHash.h  benchmark.h  cmdline.h  hashfunc.h  packed_array.h  util.h  utils.cpp  utils.h
